@@ -67,6 +67,8 @@ AC_SUBST(DWMDIR)
 AC_SUBST(DWMINCS)
 AC_SUBST(DWMLIBS)
 
+DWM_CHECK_PKG(dwmwhat,[exit 1])
+
 DWM_CHECK_NEED_LIBATOMIC
 
 dnl  Look for libtermcap
@@ -148,6 +150,9 @@ esac
 AC_SUBST(CXXFLAGS)
 
 DWM_CHECK_LIBSTDCPPFS
+
+DWM_WHAT_STATUS=`./getvers.sh -S`
+AC_SUBST(DWM_WHAT_STATUS)
 
 BUILD_DOCS=""
 AC_ARG_ENABLE([docs],[AS_HELP_STRING([--enable-docs],[build documentation])],
