@@ -1,3 +1,7 @@
+2025-11-30  Daniel W. McRobb  <dwm@spark.mcplex.net>
+
+	* Use Dwm::What::Info for version information.
+
 2025-09-05  Daniel W. McRobb  <dwm@kiva.mcplex.net>
 
 	* tagged as mccurtain-0.0.14
